minor tweaks, new .brewfile